# sqldump2json

./: .gitignore  README.md  pyproject.toml  sqldump2json  sqldump2json.py
testdata/: dump.sql
tests/: __init__.py
