[tool.poetry]
name = "sqldump2json"
version = "1.0.0"
description = "Converts SQL dump to a JSON stream"
authors = ["Sergey M"]
license = "Free for Personal Use Only"
readme = "README.md"
repository = "https://github.com/s3rgeym/sqldump2json"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sqldump2json = 'sqldump2json:main'
